* OTH#0000 Allow to specify the model to search_and_stream on
* FEA#8137 Add a batch to create report production requests on a lot of records in one go
* FEA#7946 Allow to define a custom format string for dates in report templates
* BUG#7882 Use user's language if no recipient is defined when generating reports

Version 1.14 - 2017-11-09
* FEA#7294 Manage authorizations on report template in report wizard
* FEA#7024 Configure default reports templates
* BUG#7065 Address variable in reports is now the main contact address
* BUG#6993 Removing simple json import
* OTH#0000 Add default state "invisible" on generate button to easily override it later
* OTH#0000 Move group-by method from report_engine_flow
* BUG#9730 Convert generated documents after the optional edition phase
* BUG#6648 Unify the 'Lang' data type when generating reports
* FEA#6536 Manage light function fields for reports
* BUG#6569 Restore multi-entity printing capabilities
* OTH#0000 Fix: Migration which replace Null values with an empty string for the column 'kind' of 'report_template'
* OTH#0000 Fix report template kind domain
* BUG#6438 Make reports parameter work again
* OTH#0000 Remove unused attachment fields from report template version view
* FEA#6373 Add Asynchronous Immediate on event type actions
* OTH#0000 Fix missing import Printable
* OTH#0000 Fix typo: use template.get_extension instead of template.output_format
* FEA#2227 Store template version data in database
* FEA#6180 Add strftime function to report context to format date in any possible way

Version 1.12 - 2017-04-28
* FEA#0000 Support for all conversion combination between storage in EDM and export format
* FEA#0000 Support for all conversion combination between storage in EDM and export format for either microsoft office, libre office or pdf
* FEA#0000 The "Export directory" field now support genshi expression
* FEA#0000 Add output method which does not evaluate the document